# V

./: .flake8  .gitignore  .pre-commit-config.yaml  .replit  CLEAN_DEPLOYMENT_GUIDE.md  CONSOLIDATION_COMPLETED.md  CONSOLIDATION_PLAN.md  DEPLOYMENT_CONSISTENCY_AUDIT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  Dockerfile.postgres  ENTRY_PRICE_FIX.md  FINAL_ARCHITECTURE_STATUS.md  ISSUES_RESOLVED_AUG_2025.md  LIMIT_ORDER_FIX.md  LIVE_MARKET_DATA_MIGRATION.md  MANUAL_WEBHOOK_SETUP.md  MINIAPP_SETUP.md  Makefile  NEON_SETUP.md  PENDING_STATUS_DISPLAY_FIX.md  PHASE_7_COMPLETION_SUMMARY.md  Procfile  Push_update.sh  README_DEPLOYMENT.md  README_VERCEL.md  REAL_TRADING_IMPLEMENTATION.md  SECURITY_IMPROVEMENTS.md  SMC_ANALYZER_DOCUMENTATION.md  SMC_Analyzer_Settings_Documentation.md  SMC_CANDLE_INCREASE_IMPLEMENTATION_PLAN.md  SMC_CODE_REVIEW_FINDINGS.md  SMC_FIXES_PLAN.md  SMC_IMPLEMENTATION_STATUS.md  SMC_MULTI_TIMEFRAME_IMPLEMENTATION_PLAN.md  SMC_UPGRADE_PLAN.md  STANDALONE_VERCEL_DEPLOYMENT.md  VERCEL_ARCHITECTURE_AUDIT.md  VERCEL_DEPLOYMENT.md  VERCEL_DEPLOYMENT_FIX.md  (+49 more)
api/: __init__.py  app.py  app_backup.py  app_old.py  app_streamlined.py  circuit_breaker.py  create_vercel_schema.sql  enhanced_cache.py  enhanced_cache_backup.py  error_demo.py  error_handler.py  exchange_factory.py  exchange_sync.py  index.py  klines_background_worker.py  klines_background_worker_backup.py  lbank_client.py  models.py  requirements.txt  smc_analyzer.py  toobit_client.py  unified_data_sync_service.py  unified_exchange_client.py  vercel_sync.py  webhook.py  webhook_setup.py
attached_assets/: Pasted--dependencies-name-boolean-py-version-5-0-vulns-name-cachecontrol-v-1757477706778_1757477706782.txt  Pasted-2025-08-28T02-25-02-676770981Z-Collecting-pycparser-from-cffi-1-14-cryptography-45-0-6-r-requi-1756348382354_1756348382375.txt  Pasted-def-place-futures-trade-with-tp-sl-self-symbol-str-side-str-quantity-str--1756600957825_1756600957830.txt  app_1754792598184.py  bot_1754792598142.py  logs_result_1755041536442.csv  multi_trade_manager_1754792597996.py  portfolio_tracker_1754792597959.py  replit_1754792597805.md  trade_bot_1754792598087.py  trade_config_1754792598051.py
docs/: DEPLOYMENT_GUIDE.md  FINAL_ARCHITECTURE_STATUS.md  SMC_MULTI_TIMEFRAME_IMPLEMENTATION_PLAN.md  UPTIMEROBOT_SETUP.md  VERCEL_DEPLOYMENT.md  VERCEL_DEPLOYMENT_STATUS.md  render_deploy_instructions.md
instance/: trading_bot.db
scripts/: debug_toobit_signature.py  deploy.sh  deploy_to_vercel.sh  exchange_sync.py  migrate_add_scaled_entries.py  migrate_add_scaled_entries.sql  render_database_fix.py  render_deploy.py  render_optimize.py  render_performance_fix.py  render_session_fix.py  render_start.py  render_trading_fixes.py
static/: dashboard.js
templates/: dashboard.html  mini_app.html
(+13 files in other folders)
