[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-bot"
version = "0.1.0"
description = "Multi-Exchange Trading Bot with Telegram Integration"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.1",
    "requests>=2.32.4",
    "psycopg2-binary>=2.9.10",
    "email-validator>=2.2.0",
    "gunicorn>=23.0.0",
    "werkzeug>=3.1.3",
    "cryptography>=45.0.6",
    "sqlalchemy>=2.0.42",
    "hyperliquid-python-sdk>=0.18.0",
    "pycryptodome>=3.20.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.17.0",
    "black>=25.0.0",
    "flake8>=7.3.0",
    "isort>=6.0.0",
    "pre-commit>=4.3.0",
    "types-requests>=2.32.0",
    "types-flask>=1.1.6",
    "types-setuptools>=80.0.0",
]

# Black code formatting configuration
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
  | instance
  | attached_assets
)/
'''

# isort import sorting configuration
[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_glob = ["**/migrations/*", "instance/*", "attached_assets/*"]
known_first_party = ["api", "scripts", "config"]
known_third_party = ["flask", "sqlalchemy", "requests", "aiohttp"]

# MyPy type checking configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true
strict_optional = true

# Exclude specific directories and files
exclude = [
    "instance/",
    "attached_assets/",
    "docs/",
    "scripts/debug_.*\\.py$",
    ".*\\.sql$"
]

# Per-module options
[[tool.mypy.overrides]]
module = [
    "hyperliquid.*",
    "eth_account.*",
    "Crypto.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "api.*"
disallow_untyped_defs = false
warn_return_any = false

# Flake8 configuration would go in setup.cfg or .flake8 file

# Setuptools configuration for package discovery
[tool.setuptools]
packages = ["api", "scripts"]

[tool.setuptools.package-dir]
"" = "."

# Exclude non-Python directories from package discovery
[tool.setuptools.exclude-package-data]
"*" = ["instance/*", "attached_assets/*", "docs/*", "*.sql", "*.db", "*.csv", "*.txt", "*.md"]
